--- a/ScheduleUi/MainWindow.ui
+++ b/ScheduleUi/MainWindow.ui
@@ -966,6 +966,17 @@
                     </widget>
                    </item>
                    <item>
+                    <widget class="QPushButton" name="previewModelButton">
+                     <property name="text">
+                      <string>Preview model</string>
+                     </property>
+                     <property name="icon">
+                      <iconset resource="../resources.qrc">
+                       <normaloff>:/icons/icons/fgviewer.png</normaloff>:/icons/icons/fgviewer.png</iconset>
+                     </property>
+                    </widget>
+                   </item>
+                   <item>
                     <widget class="QPushButton" name="addFleetButton">
                      <property name="text">
                       <string>Add fleet</string>
