--- a/ScheduleUi/MainWindow.ui
+++ b/ScheduleUi/MainWindow.ui
@@ -317,6 +317,9 @@
                   <height>3000</height>
                  </size>
                 </property>
+                <property name="editTriggers">
+                 <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed</set>
+                </property>
                 <property name="dragEnabled">
                  <bool>false</bool>
                 </property>
@@ -671,8 +674,14 @@
                   <height>3000</height>
                  </size>
                 </property>
+                <property name="editTriggers">
+                 <set>QAbstractItemView::NoEditTriggers</set>
+                </property>
                 <property name="alternatingRowColors">
                  <bool>true</bool>
+                </property>
+                <property name="selectionMode">
+                 <enum>QAbstractItemView::SingleSelection</enum>
                 </property>
                 <property name="selectionBehavior">
                  <enum>QAbstractItemView::SelectRows</enum>
@@ -1028,6 +1037,9 @@
                   <height>3000</height>
                  </size>
                 </property>
+                <property name="editTriggers">
+                 <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed</set>
+                </property>
                 <property name="alternatingRowColors">
                  <bool>true</bool>
                 </property>
@@ -1307,6 +1319,9 @@
                   <width>3000</width>
                   <height>3000</height>
                  </size>
+                </property>
+                <property name="editTriggers">
+                 <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed</set>
                 </property>
                 <property name="alternatingRowColors">
                  <bool>true</bool>
