Added function to find hubs (airports with most departures) and bumped app version to 0.3

--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="icons">
+    <file>icons/application-x-siag.png</file>
     <file>icons/fgviewer.png</file>
     <file>icons/svn-commit.png</file>
     <file>icons/bookmarks-organize.png</file>
