--- a/ScheduleUi/MainWindow.ui
+++ b/ScheduleUi/MainWindow.ui
@@ -242,19 +242,8 @@
                   </layout>
                  </item>
                  <item row="1" column="1">
-                  <layout class="QHBoxLayout" name="horizontalLayout">
-                   <item>
-                    <widget class="QPushButton" name="deleteDuplicatesButton">
-                     <property name="text">
-                      <string>Delete duplicates</string>
-                     </property>
-                     <property name="icon">
-                      <iconset resource="../resources.qrc">
-                       <normaloff>:/icons/icons/application-exit.png</normaloff>:/icons/icons/application-exit.png</iconset>
-                     </property>
-                    </widget>
-                   </item>
-                   <item>
+                  <layout class="QGridLayout" name="gridLayout_11">
+                   <item row="0" column="1">
                     <widget class="QPushButton" name="findDupesButton">
                      <property name="text">
                       <string>Create duplicate index</string>
@@ -265,7 +254,7 @@
                      </property>
                     </widget>
                    </item>
-                   <item>
+                   <item row="0" column="2">
                     <widget class="QPushButton" name="addButton">
                      <property name="text">
                       <string>Add flight</string>
@@ -276,7 +265,29 @@
                      </property>
                     </widget>
                    </item>
-                   <item>
+                   <item row="1" column="4">
+                    <widget class="QPushButton" name="truncateButton">
+                     <property name="text">
+                      <string>Empty flights table</string>
+                     </property>
+                     <property name="icon">
+                      <iconset resource="../resources.qrc">
+                       <normaloff>:/icons/icons/system-reboot.png</normaloff>:/icons/icons/system-reboot.png</iconset>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="1" column="2">
+                    <widget class="QPushButton" name="deleteDuplicatesButton">
+                     <property name="text">
+                      <string>Delete duplicates</string>
+                     </property>
+                     <property name="icon">
+                      <iconset resource="../resources.qrc">
+                       <normaloff>:/icons/icons/application-exit.png</normaloff>:/icons/icons/application-exit.png</iconset>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="1" column="3">
                     <widget class="QPushButton" name="deleteButton">
                      <property name="text">
                       <string>Delete flights</string>
@@ -287,14 +298,14 @@
                      </property>
                     </widget>
                    </item>
-                   <item>
-                    <widget class="QPushButton" name="truncateButton">
+                   <item row="0" column="3">
+                    <widget class="QPushButton" name="findHubsButton">
                      <property name="text">
-                      <string>Empty flights table</string>
+                      <string>Find hubs</string>
                      </property>
                      <property name="icon">
                       <iconset resource="../resources.qrc">
-                       <normaloff>:/icons/icons/system-reboot.png</normaloff>:/icons/icons/system-reboot.png</iconset>
+                       <normaloff>:/icons/icons/application-x-siag.png</normaloff>:/icons/icons/application-x-siag.png</iconset>
                      </property>
                     </widget>
                    </item>
